--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,7 @@ html, body {
     padding: 1.25rem 2.5rem;
     background: none;
     border: none;
+    cursor: pointer;
 }
 .btn-outlined {
     border: 1px solid var(--color-primary);
@@ -768,6 +769,42 @@ header {
             border-radius: 99px 0 0 99px;
         }
     }
+
+    .carousel-container {
+        position: relative;
+    }
+
+    .arrow {
+        background-color: transparent;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 10;
+        transition: background-color 0.3s, border-color 0.3s;
+    }
+    
+    .prev-arrow {
+        left: 10rem;
+    }
+    
+    .next-arrow {
+        right: 10rem;
+    }
+    
+    .arrow:hover {
+        background-color: #f0f0f0;
+        border-color: #bbb;
+    }
+
     .project-card {
         margin: var(--primery-padding);
         border: 1px solid var(--color-c-white);
@@ -779,6 +816,7 @@ header {
             .project-image {
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
         }
         .project-content {
@@ -858,6 +896,10 @@ header {
         .contact-item {
             margin-bottom: 1.5rem;
             margin-right: 2rem;
+
+            h2 {
+                margin-bottom: .8rem;
+            }
         }
 
         form {
@@ -903,6 +945,56 @@ header {
     }
 }
 
+@media (max-width: 1390px) {
+    header {
+        padding-left: 5rem;
+        .header-left {
+            h1 {
+                font-size: 4rem;
+                span {
+                    width: 5rem;
+                    height: 5rem;
+                    padding: .35rem;
+                }
+            }
+            .btn-wraper {
+                h2 {
+                    font-size: 2.7rem;
+                }
+            }
+        }
+        .bottom-section {
+            .Rectangle-image {
+                transform: scale(.8);
+                left: -3rem;
+                bottom: -2rem;
+            }
+        }
+    }  
+    
+    .positivity {
+        .stats-section {
+            flex: 1;
+            padding: 0;
+        }
+    }
+
+    .projects {
+        .carousel-container {
+            .prev-arrow {
+                left: 2rem;
+            }
+            
+            .next-arrow {
+                right: 2rem;
+            }
+        }
+        .project-card {
+            margin: 1rem 3rem;
+        }
+    }
+  
+}
 
 @media (max-width: 1000px) {
 
@@ -920,8 +1012,8 @@ header {
                 font-size: 3rem;
 
                 span {
-                    width: 5rem;
-                    height: 5rem;
+                    width: 4rem;
+                    height: 4rem;
                     padding: .25rem;
                 }
             }
@@ -962,6 +1054,7 @@ header {
 
         .bottom-section {
             margin: 0;
+            width: 100%;
 
             .Rectangle-image {
                 display: none;
@@ -969,7 +1062,9 @@ header {
 
             .brand-section {
                 margin-top: 2.5rem;
-                width: 100%;
+                margin-right: 0;
+                flex: 1;
+
                 .brand {
                     flex: 1;
                     img {
@@ -992,13 +1087,21 @@ header {
 
     .growth {
         .icon-box-container {
-            padding: 5rem 2rem 2rem 5rem;
+            padding: 5rem 0;
+            width: 100%;
             flex-direction: column;
-            align-items: start;
+            align-items: center;
             .icon-box-wrapper {
+                width: 100%;
+                margin-bottom: 2rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+
                 .icon-box-num {
                     font-size: 4.5rem;
-                    transform: rotateX(36deg) rotateY(322deg) rotateZ(352deg) translate3d(-40px, 80px, 20px);
+                    transform: rotateX(357deg) rotateY(7deg) rotateZ(359deg) translate3d(-20px, 48px, 20px);
                 }
                 .icon-box-holder {
                     width: 16rem;
@@ -1013,9 +1116,8 @@ header {
                     font-size: 2rem;
                 }
                 .icon-line {
-                    width: 100%;
+                    width: 25%;
                     height: 3px;
-                    margin: .5rem .5rem 1rem .5rem;
                 }
                 .icon-box-description {
                     font-size: 1.5rem;
@@ -1143,6 +1245,28 @@ header {
                     margin-bottom: 1rem;
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 774px) {
+    header {
+        .header-left {
+            h1 {
+                span {
+                    width: 3rem;
+                    height: 3rem;
+                    padding: .1rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 703px) {
+    header {
+        .reviews {
+            margin-top: 2rem;
         }
     }
 }
@@ -1299,10 +1423,14 @@ header {
             .icon-box-wrapper {
                 width: 100%;
                 margin-bottom: 2rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
 
                 .icon-box-num {
                     font-size: 2.5rem;
-                    transform: rotateX(30deg) rotateY(337deg) rotateZ(345deg) translate3d(-14px, -52px, 8px);
+                    transform: rotateX(10deg) rotateY(336deg) rotateZ(2deg) translate3d(-3px, 2px, 8px);
                 }
                 .icon-box-holder {
                     width: 7rem;
@@ -1335,6 +1463,9 @@ header {
         .feature-blocks-container {
             gap: 15px;
             padding: 5% 5% 1% 5%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
             .block {
                 width: 90%;
@@ -1448,7 +1579,7 @@ header {
 
         .footer-left {
             h1 {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 margin-bottom: 1rem;
             }
 
@@ -1456,35 +1587,52 @@ header {
                 margin-bottom: 1rem;
                 margin-left: 0;
                 h2 {
-                    font-size: 1.2rem;
+                    font-size: .8rem;
                     margin-bottom: 0.5rem;
                 }
 
                 p {
                     font-size: .6rem;
                 }
+
+                li {
+                    font-size: .6rem;
+                    margin-bottom: .3rem;
+                    margin-left: 2rem;
+                }
             }
 
             .btn {
+                width: 100%;
                 padding: .5rem 1rem;
                 font-size: .7rem;
+                display: flex;
+                justify-content: center;
             }
         }
 
         .footer-right {
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
     
             .column {
                 margin-left: 2rem;
+
+                ul {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
     
                 li {
                     font-size: .6rem;
                     margin-bottom: .5rem;
-                    text-align: left;
                 }
     
                 h3 {
-                    text-align: left;
+                    text-align: center;
                     font-size: 1rem;
                     margin-bottom: 1.5rem;
                 }
